// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageWallet has the expected html structure 1`] = `
<div
  class="tm-page"
  data-title="Wallet"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total Steak
                </h3>
                 
                <h2>
                  1,014.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available Steak
                </h3>
                 
                <h2>
                  1,000.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a>
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a>
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <a
              class=""
              href="#/preferences"
              id="settings"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </a>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
     
    <modal-search
      type="balances"
    />
     
    <ul>
      <li
        class="li-coin tm-li-balance"
      >
        <div
          class="li-coin__icon"
        >
          <img
            src="../../assets/images/cosmos-logo.png"
          />
        </div>
         
        <div
          class="li-coin__content"
        >
          <div
            class="li-coin__content__left__denom"
          >
            <p
              class="coin-denom"
            >
              Fermion
            </p>
          </div>
           
          <div
            class="li-coin__content__left__amount"
          >
            <p
              class="coin-amount"
            >
              2,300.0000000000
            </p>
          </div>
           
          <a
            class=""
            href="#/wallet/send/fermion"
          >
            <button
              class="tm-btn sendTx-btn"
            >
              <span
                class="tm-btn__container tm-btn__icon-right tm-btn--primary"
              >
                <i
                  aria-hidden="true"
                  class="tm-btn__icon material-icons"
                >
                  chevron_right
                </i>
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send
                </span>
              </span>
            </button>
          </a>
        </div>
      </li>
      <li
        class="li-coin tm-li-balance"
      >
        <div
          class="li-coin__icon"
        >
          <img
            src="../../assets/images/cosmos-logo.png"
          />
        </div>
         
        <div
          class="li-coin__content"
        >
          <div
            class="li-coin__content__left__denom"
          >
            <p
              class="coin-denom"
            >
              Mycoin
            </p>
          </div>
           
          <div
            class="li-coin__content__left__amount"
          >
            <p
              class="coin-amount"
            >
              1,000.0000000000
            </p>
          </div>
           
          <a
            class=""
            href="#/wallet/send/mycoin"
          >
            <button
              class="tm-btn sendTx-btn"
            >
              <span
                class="tm-btn__container tm-btn__icon-right tm-btn--primary"
              >
                <i
                  aria-hidden="true"
                  class="tm-btn__icon material-icons"
                >
                  chevron_right
                </i>
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send
                </span>
              </span>
            </button>
          </a>
        </div>
      </li>
      <li
        class="li-coin tm-li-balance"
      >
        <div
          class="li-coin__icon"
        >
          <img
            src="../../assets/images/cosmos-logo.png"
          />
        </div>
         
        <div
          class="li-coin__content"
        >
          <div
            class="li-coin__content__left__denom"
          >
            <p
              class="coin-denom"
            >
              Steak
            </p>
          </div>
           
          <div
            class="li-coin__content__left__amount"
          >
            <p
              class="coin-amount"
            >
              1,000.0000000000
            </p>
          </div>
           
          <a
            class=""
            href="#/wallet/send/steak"
          >
            <button
              class="tm-btn sendTx-btn"
            >
              <span
                class="tm-btn__container tm-btn__icon-right tm-btn--primary"
              >
                <i
                  aria-hidden="true"
                  class="tm-btn__icon material-icons"
                >
                  chevron_right
                </i>
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send
                </span>
              </span>
            </button>
          </a>
        </div>
      </li>
    </ul>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageWallet should filter the balances 1`] = `
<div
  class="tm-page"
  data-title="Wallet"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total Steak
                </h3>
                 
                <h2>
                  1,014.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available Steak
                </h3>
                 
                <h2>
                  1,000.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a>
              <i
                class="material-icons"
              >
                refresh
              </i>
            </a>
             
            <a>
              <i
                class="material-icons"
              >
                search
              </i>
            </a>
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <a
              class=""
              href="#/preferences"
              id="settings"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </a>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
     
    <modal-search
      type="balances"
    />
     
    <ul>
      <li
        class="li-coin tm-li-balance"
      >
        <div
          class="li-coin__icon"
        >
          <img
            src="../../assets/images/cosmos-logo.png"
          />
        </div>
         
        <div
          class="li-coin__content"
        >
          <div
            class="li-coin__content__left__denom"
          >
            <p
              class="coin-denom"
            >
              Steak
            </p>
          </div>
           
          <div
            class="li-coin__content__left__amount"
          >
            <p
              class="coin-amount"
            >
              1,000.0000000000
            </p>
          </div>
           
          <a
            class=""
            href="#/wallet/send/steak"
          >
            <button
              class="tm-btn sendTx-btn"
            >
              <span
                class="tm-btn__container tm-btn__icon-right tm-btn--primary"
              >
                <i
                  aria-hidden="true"
                  class="tm-btn__icon material-icons"
                >
                  chevron_right
                </i>
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send
                </span>
              </span>
            </button>
          </a>
        </div>
      </li>
    </ul>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;
